--- a/printf/Makefile
+++ b/printf/Makefile
@@ -5,11 +5,9 @@ CFLAGS = -Wall -Wextra -Werror
 AR = ar rcs
 RM = rm -f
 
-LIBFT_DIR = ./libft/
-
-
 SRCS  = ft_printf.c \
 	ft_check.c \
+	ft_utils.c \
 	ft_changehex.c \
 	ft_putchar.c \
 	ft_putstr.c \
@@ -24,8 +22,6 @@ OBJS = $(SRCS:%.c=%.o)
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(MAKE) -C $(LIBFT_DIR)
-	cp libft/libft.a $(NAME)
 	$(AR) $@ $^
 
 %.o: %.c
@@ -33,12 +29,9 @@ $(NAME): $(OBJS)
 
 clean:
 	$(RM) $(OBJS)
-	make -C libft clean
 fclean: 
 	make clean
 	$(RM) $(NAME)
-	make -C $(LIBFT_DIR) fclean
-
 re: 
 	make fclean 
 	make all
