--- a/c++/C00/ex01/Makefile
+++ b/c++/C00/ex01/Makefile
@@ -2,9 +2,14 @@ NAME	=	PhoneBook
 CC		=	c++ 
 CFLAG	=	-Wall -Wextra -Werror -std=c++98
 RM		=	rm -rf
+
+HEADERS = Contact.hpp \
+          PhoneBook.hpp
+
 SRCS	=	PhoneBook.cpp \
 			Contact.cpp \
 			main.cpp
+
 OBJS	=	${SRCS:.c=.o}
 
 all	:
@@ -13,7 +18,7 @@ all	:
 $(NAME) : $(OBJS)
 	@$(CC) $(CFLAGS) -o $(NAME) $(OBJS)
 
-%.o : %.c
+%.o : %.cpp $(HEADERS)
 	@$(CC) $(CFLAGS) -c $< -o $@
 
 clean :
